--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,16 @@
 {
-	"name": "rtconner/laravel-likeable",
+	"name": "parfumix/laravel-likeable",
 	"description": "Trait for Laravel Eloquent models to allow easy implementation of a 'like' or 'favorite' or 'remember' feature.",
 	"license": "MIT",
-	"homepage": "https://smartersoftware.net/packages/laravel-likeable-favorite",
 	"keywords": ["trait", "laravel", "eloquent", "likeable", "likable", "like", "remember", "follow", "favorite", "favourite"],
-	"authors": [
-		{
-			"name": "Robert Conner",
-			"email": "rtconner@smarter.bz"
-		}
-	],
 	"require": {
 		"php": ">=5.3.0",
 		"illuminate/database": "~5.0",
 		"illuminate/support": "~5.0"
 	},
-	"require-dev": {
-		"phpunit/phpunit": "~4.0",
-		"mockery/mockery": "~0.9"
-	},
 	"autoload": {
 		"psr-4": {
-			"Conner\\Likeable\\": "src/"
+			"Parfumix\\Likeable\\": "src/"
 		}
 	}
 }
